--- a/TeamsClient_/CMakeLists.txt
+++ b/TeamsClient_/CMakeLists.txt
@@ -2,77 +2,60 @@ cmake_minimum_required(VERSION 3.16)
 
 project(TeamsClient_ VERSION 0.1 LANGUAGES CXX)
 
+# === Options globales ===
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
+set(CMAKE_OSX_ARCHITECTURES "arm64")   # Pour Apple Silicon
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++") # STL correcte pour macOS
 
+# === Qt ===
 set(CMAKE_PREFIX_PATH "$ENV{HOME}/Qt/6.9.3/macos/lib/cmake/Qt6")
-
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets Test)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets Test)
 
-file(GLOB Atoms_SOURCES
-     "Atoms/*.cpp"
-     "Atoms/*.h"
-)
+# === Boost (header-only pour asio) ===
+set(BOOST_ROOT "/opt/homebrew/opt/boost")
+set(BOOST_INCLUDEDIR "/opt/homebrew/include")
+include_directories(${BOOST_INCLUDEDIR})
 
-file(GLOB Molecules_SOURCES
-     "Molecules/*.cpp"
-     "Molecules/*.h"
-)
+# === Sources ===
+file(GLOB Atoms_SOURCES "Atoms/*.cpp" "Atoms/*.h")
+file(GLOB Molecules_SOURCES "Molecules/*.cpp" "Molecules/*.h")
+file(GLOB Organisms_SOURCES "Organisms/*.cpp" "Organisms/*.h")
+file(GLOB Network_SOURCES "Network/*.cpp" "Network/*.h")
 
-file(GLOB Organisms_SOURCES
-     "Organisms/*.cpp"
-     "Organisms/*.h"
-)
-
-set(SOURCES 
-${Atoms_SOURCES}
-        ${Molecules_SOURCES}
-        ${Organisms_SOURCES}
+set(SOURCES
+    ${Atoms_SOURCES}
+    ${Molecules_SOURCES}
+    ${Organisms_SOURCES}
+    ${Network_SOURCES}
 )
 
 set(PROJECT_SOURCES
-        main.cpp
-        mainwindow.cpp
-        mainwindow.h
-        mainwindow.ui
-        ${SOURCES}
+    main.cpp
+    mainwindow.cpp
+    mainwindow.h
+    mainwindow.ui
+    ${SOURCES}
 )
 
+# === Exécutable principal ===
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
     qt_add_executable(TeamsClient_
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
     )
-# Define target properties for Android with Qt 6 as:
-#    set_property(TARGET TeamsClient_ APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
-#                 ${CMAKE_CURRENT_SOURCE_DIR}/android)
-# For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation
 else()
-    if(ANDROID)
-        add_library(TeamsClient_ SHARED
-            ${PROJECT_SOURCES}
-        )
-# Define properties for Android with Qt 5 after find_package() calls as:
-#    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
-    else()
-        add_executable(TeamsClient_
-            ${PROJECT_SOURCES}
-        )
-    endif()
+    add_executable(TeamsClient_ ${PROJECT_SOURCES})
 endif()
 
 target_link_libraries(TeamsClient_ PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
 
-# Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
-# If you are developing for iOS or macOS you should consider setting an
-# explicit, fixed bundle identifier manually though.
 if(${QT_VERSION} VERSION_LESS 6.1.0)
-  set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.TeamsClient_)
+    set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.TeamsClient_)
 endif()
 set_target_properties(TeamsClient_ PROPERTIES
     ${BUNDLE_ID_OPTION}
@@ -92,7 +75,8 @@ install(TARGETS TeamsClient_
 if(QT_VERSION_MAJOR EQUAL 6)
     qt_finalize_executable(TeamsClient_)
 endif()
-# --- GoogleTest configuration ---
+
+# === GoogleTest ===
 include(FetchContent)
 
 FetchContent_Declare(
@@ -100,27 +84,28 @@ FetchContent_Declare(
   URL https://github.com/google/googletest/archive/refs/heads/main.zip
 )
 
+# Forcer GoogleTest à utiliser C++20 et arm64
 set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++ -arch arm64")
+
 FetchContent_MakeAvailable(googletest)
 
-# --- Enable testing ---
 enable_testing()
 
-file(GLOB TEST_SOURCES
-    "Tests/*.cpp"
-)
+file(GLOB TEST_SOURCES "Tests/*.cpp")
 
 add_executable(TeamsClient_Tests
     ${TEST_SOURCES}
     ${SOURCES}
 )
 
-# Ajoute AUTOMOC pour les tests Qt (sinon slots/signal cassent)
 set_target_properties(TeamsClient_Tests PROPERTIES AUTOMOC ON)
 
-# --- Liens nécessaires ---
 target_link_libraries(TeamsClient_Tests
     PRIVATE
+        GTest::gtest
         GTest::gtest_main
         Qt${QT_VERSION_MAJOR}::Core
         Qt${QT_VERSION_MAJOR}::Widgets
