--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,6 +30,25 @@
         "unordered_map": "cpp",
         "variant": "cpp",
         "vector": "cpp",
-        "algorithm": "cpp"
+        "algorithm": "cpp",
+        "__tree": "cpp",
+        "charconv": "cpp",
+        "ctime": "cpp",
+        "forward_list": "cpp",
+        "list": "cpp",
+        "map": "cpp",
+        "optional": "cpp",
+        "ratio": "cpp",
+        "set": "cpp",
+        "unordered_set": "cpp",
+        "__locale": "cpp",
+        "cstdarg": "cpp",
+        "execution": "cpp",
+        "ios": "cpp",
+        "mutex": "cpp",
+        "print": "cpp",
+        "sstream": "cpp",
+        "streambuf": "cpp",
+        "iostream": "cpp"
     }
 }
