[ADD] Connexion TLS sécurisée côté client

--- a/TeamsClient_/CMakeLists.txt
+++ b/TeamsClient_/CMakeLists.txt
@@ -11,6 +11,17 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_OSX_ARCHITECTURES "arm64")   # Pour Apple Silicon
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++") # STL correcte pour macOS
 
+# === OpenSSL ===
+set(OPENSSL_ROOT_DIR "/opt/homebrew/opt/openssl@3")
+set(OPENSSL_INCLUDE_DIR "${OPENSSL_ROOT_DIR}/include")
+set(OPENSSL_LIBRARIES "${OPENSSL_ROOT_DIR}/lib")
+
+find_package(OpenSSL REQUIRED)
+
+include_directories(${OPENSSL_INCLUDE_DIR})
+message(STATUS "OpenSSL include dir: ${OPENSSL_INCLUDE_DIR}")
+message(STATUS "OpenSSL libraries: ${OPENSSL_LIBRARIES}")
+
 # === Qt ===
 set(CMAKE_PREFIX_PATH "$ENV{HOME}/Qt/6.9.3/macos/lib/cmake/Qt6")
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets Test)
@@ -52,7 +63,12 @@ else()
     add_executable(TeamsClient_ ${PROJECT_SOURCES})
 endif()
 
-target_link_libraries(TeamsClient_ PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+target_link_libraries(TeamsClient_
+    PRIVATE
+        Qt${QT_VERSION_MAJOR}::Widgets
+        OpenSSL::SSL
+        OpenSSL::Crypto
+)
 
 if(${QT_VERSION} VERSION_LESS 6.1.0)
     set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.TeamsClient_)
@@ -110,6 +126,8 @@ target_link_libraries(TeamsClient_Tests
         Qt${QT_VERSION_MAJOR}::Core
         Qt${QT_VERSION_MAJOR}::Widgets
         Qt${QT_VERSION_MAJOR}::Test
+        OpenSSL::SSL
+        OpenSSL::Crypto
 )
 
 include(GoogleTest)
