[ADD] Connexion TLS sécurisée côté server

--- a/TeamsServer_/CMakeLists.txt
+++ b/TeamsServer_/CMakeLists.txt
@@ -4,9 +4,10 @@ project(server LANGUAGES C CXX)
 set(CMAKE_C_STANDARD 17)
 set(CMAKE_CXX_STANDARD 20)
 
-# Chemins Boost
 set(BOOST_ROOT /usr/local/boost_1_89_0)
 include_directories(${BOOST_ROOT}/include)
+
+find_package(OpenSSL REQUIRED)
 
 add_executable(server src/main.cpp src/Client.cpp src/Client.h)
 
@@ -15,6 +16,8 @@ target_link_libraries(server PRIVATE
     ${BOOST_ROOT}/lib/libboost_thread.so
     ${BOOST_ROOT}/lib/libboost_date_time.so
     pthread
+    OpenSSL::SSL
+    OpenSSL::Crypto
 )
 
 target_link_options(server PRIVATE -Wl,-rpath,${BOOST_ROOT}/lib)
