--- a/TeamsServer_/dockerfile
+++ b/TeamsServer_/dockerfile
@@ -10,23 +10,30 @@ RUN apt-get update && apt-get install -y \
     wget \
     tar \
     bzip2 \
+    libpq-dev \
+    libpqxx-dev \
     && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
-RUN wget https://sourceforge.net/projects/boost/files/boost/1.89.0/boost_1_89_0.tar.bz2/download \
-    -O boost_1_89_0.tar.bz2 && \
+RUN wget https://archives.boost.io/release/1.89.0/source/boost_1_89_0.tar.bz2 -O boost_1_89_0.tar.bz2 && \
     tar --bzip2 -xf boost_1_89_0.tar.bz2 && \
     cd boost_1_89_0 && \
     ./bootstrap.sh --prefix=/usr/local/boost_1_89_0 && \
-    ./b2 install threading=multi link=shared runtime-link=shared  && \
+    ./b2 install threading=multi link=shared runtime-link=shared && \
     cd .. && rm -rf boost_1_89_0 boost_1_89_0.tar.bz2
-  
+
+RUN git clone https://github.com/trusch/libbcrypt /tmp/bcrypt
+RUN cd /tmp/bcrypt && \
+    mkdir build && cd build && \
+    cmake .. && make && make install && ldconfig && \
+    cd / && rm -rf /tmp/bcrypt
+
 COPY . .
 
 RUN mkdir build && cd build && \
     cmake .. && \
-    cmake --build .
+    cmake --build . 
 
 EXPOSE 12345
 
