[REFACTOR] Nouvelle archi avec 3 serveurs avec utilisation précise (Auth, messages, visio) et 3 endpoint séparés

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,9 @@ services:
     env_file:
       - .env
     ports:
-      - "${SERVER_PORT}:${SERVER_PORT}"
+      - "${SERVER_PORT}:${SERVERAUTH_PORT}"
+      - "${SERVER_PORT}:${SERVERCHAT_PORT}"
+      - "${SERVER_PORT}:${SERVERVISIO_PORT}"
     tty: true
 
 volumes:
