--- a/.env
+++ b/.env
@@ -4,4 +4,6 @@ DB_PORT=5432
 DB_NAME=users_db
 DB_USER=myuser
 DB_PASSWORD=mypassword
-SERVER_PORT=12345
+SERVERAUTH_PORT=8080
+SERVERCHAT_PORT=8081
+SERVERVISIO_PORT=8082
