--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.8"
 
 services:
   db:
@@ -10,6 +9,11 @@ services:
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: ${DB_NAME}
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${DB_USER} -d ${DB_NAME}"]
+      interval: 2s
+      timeout: 2s
+      retries: 10
     ports:
       - "${DB_PORT}:${DB_PORT}"
     volumes:
@@ -21,13 +25,13 @@ services:
       dockerfile: dockerfile
     container_name: teams_server
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     env_file:
       - .env
     ports:
-      - "${SERVER_PORT}:${SERVERAUTH_PORT}"
-      - "${SERVER_PORT}:${SERVERCHAT_PORT}"
-      - "${SERVER_PORT}:${SERVERVISIO_PORT}"
+      - "${SERVERAUTH_PORT}:${SERVERAUTH_PORT}"
+      - "${SERVERCHAT_PORT}:${SERVERCHAT_PORT}"
     tty: true
 
 volumes:
