[ADD] Singleton NATS et DATABASE. Mise en place de la connexion à la database et de la création des tables

--- a/.env
+++ b/.env
@@ -1,9 +1,22 @@
 # .env
+# ---- PostgreSQL ----
 DB_HOST=db
 DB_PORT=5432
-DB_NAME=users_db
+DB_NAME=Teams
 DB_USER=myuser
 DB_PASSWORD=mypassword
+DB_URL=postgresql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}
+
+# ---- Serveur ----
 SERVERAUTH_PORT=8080
 SERVERCHAT_PORT=8081
-SERVERVISIO_PORT=8082
+SERVER_PORT=12345
+
+# ---- Noms des tables ----
+TABLE_USERS=users
+TABLE_CHANNELS=channels
+TABLE_CHANNEL_MEMBERS=channel_members
+TABLE_MESSAGES=messages
+
+# ---- Nb de connexion disponibles dans la pool de connexion postgres ----
+NB_CONN=4
