--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-
 services:
   db:
     image: postgres:15
@@ -10,7 +9,7 @@ services:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: ${DB_NAME}
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${DB_USER} -d ${DB_NAME}"]
+      test: [ "CMD-SHELL", "pg_isready -U ${DB_USER} -d ${DB_NAME}" ]
       interval: 2s
       timeout: 2s
       retries: 10
@@ -18,6 +17,18 @@ services:
       - "${DB_PORT}:${DB_PORT}"
     volumes:
       - db_data:/var/lib/postgresql/data
+
+  nats:
+    image: nats:2.10-alpine
+    container_name: nats_server
+    ports:
+      - "4222:4222"
+      - "8222:8222"
+    healthcheck:
+      test: ["CMD", "wget", "--spider", "-q", "http://localhost:8222/healthz"]
+      interval: 2s
+      timeout: 2s
+      retries: 10
 
   server:
     build:
@@ -27,8 +38,12 @@ services:
     depends_on:
       db:
         condition: service_healthy
+      nats:
+        condition: service_healthy
     env_file:
       - .env
+    environment:
+      NATS_URL: "nats://nats:4222"
     ports:
       - "${SERVERAUTH_PORT}:${SERVERAUTH_PORT}"
       - "${SERVERCHAT_PORT}:${SERVERCHAT_PORT}"
