--- a/.env
+++ b/.env
@@ -11,6 +11,7 @@ DB_URL=postgresql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}
 SERVERAUTH_PORT=8080
 SERVERCHAT_PORT=8081
 SERVER_PORT=12345
+EXPIRY_TIME_TOKEN=7
 
 # ---- Noms des tables ----
 TABLE_USERS=users
