--- a/TeamsServer_/dockerfile
+++ b/TeamsServer_/dockerfile
@@ -13,6 +13,7 @@ RUN apt-get update && apt-get install -y \
     libpq-dev \
     libpqxx-dev \
     libnats-dev \
+    libargon2-dev \
     && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
@@ -23,12 +24,6 @@ RUN wget https://archives.boost.io/release/1.89.0/source/boost_1_89_0.tar.bz2 -O
     ./bootstrap.sh --prefix=/usr/local/boost_1_89_0 && \
     ./b2 install threading=multi link=shared runtime-link=shared && \
     cd .. && rm -rf boost_1_89_0 boost_1_89_0.tar.bz2
-
-RUN git clone https://github.com/trusch/libbcrypt /tmp/bcrypt
-RUN cd /tmp/bcrypt && \
-    mkdir build && cd build && \
-    cmake .. && make && make install && ldconfig && \
-    cd / && rm -rf /tmp/bcrypt
 
 COPY . .
 
