--- a/TeamsServer_/docker-compose.yml
+++ b/TeamsServer_/docker-compose.yml
@@ -1,3 +1,5 @@
+name: teamsserver
+
 services:
   db:
     image: postgres:15
@@ -32,7 +34,7 @@ services:
 
   server:
     build:
-      context: ./TeamsServer_
+      context: .
       dockerfile: dockerfile
     container_name: teams_server
     depends_on:
