[REFACTOR] Suppression du dossier TeamsServer pour futur merge sur le main

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -50,5 +50,6 @@
         "sstream": "cpp",
         "streambuf": "cpp",
         "iostream": "cpp"
-    }
+    },
+    "C_Cpp.errorSquiggles": "disabled"
 }
