[ADD] Ajout de TokenManager qui utilise keychain (installation séparée à aller voir dans le readme) pour sécuriser le token dans un endroit sécurisé dépendant de l'OS. Ajout de la DB qu'il faudra refactoriser en profondeur pour la suite (avec le serveur aussi). Amélioration du CMake pour plus de simplicité. Ajout de d'un interface pour authservice afin de faciliter le testing. Ajout de tests unitaires sur le model User, le service AuthNetworkService et le view model AuthViewModel

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,5 @@
         "streambuf": "cpp",
         "iostream": "cpp"
     },
-    "C_Cpp.errorSquiggles": "disabled"
+    "C_Cpp.errorSquiggles": "enabled"
 }
