[BIG REFACTOR] Refactor complet du serveur, suppression de la partie Nats qui est maintenant reservée pour une séparation des services en microservices. Simplification de l'architecture pour faciliter les test unitaires et d'intégration. Ajout des tests unitaires et d'intégration.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -50,5 +50,14 @@
         "sstream": "cpp",
         "streambuf": "cpp",
         "iostream": "cpp"
+    },
+    "files.watcherExclude": {
+        "**/build/**": true,
+        "**/.git/**": true,
+        "**/node_modules/**": true,
+        "**/out/**": true
+    },
+    "search.exclude": {
+        "**/build/**": true
     }
 }
