--- a/TeamsServer_/.env
+++ b/TeamsServer_/.env
@@ -11,7 +11,7 @@ DB_URL=postgresql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}
 SERVERAUTH_PORT=8080
 SERVERCHAT_PORT=8081
 SERVER_PORT=12345
-EXPIRY_TIME_TOKEN=7
+TOKEN_EXPIRY_MINUTES=1#0.0266667 #7
 
 # ---- Noms des tables ----
 TABLE_USERS=users
@@ -21,3 +21,5 @@ TABLE_MESSAGES=messages
 
 # ---- Nb de connexion disponibles dans la pool de connexion postgres ----
 NB_CONN=4
+
+NB_THREADS=4
