--- a/TeamsServer_/CMakeLists.txt
+++ b/TeamsServer_/CMakeLists.txt
@@ -17,7 +17,6 @@ endif()
 # ------------------------------
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(ARGON2 REQUIRED libargon2)
-
 if(NOT ARGON2_FOUND)
     message(FATAL_ERROR "Argon2 not found. Please install libargon2-dev.")
 endif()
@@ -46,47 +45,38 @@ if(NOT NATS_INCLUDE_DIR OR NOT NATS_LIBRARY)
 endif()
 
 # ------------------------------
-# Sources
+# Sources par dossier (GLOB RECURSE auto)
 # ------------------------------
-file(GLOB_RECURSE Main_SOURCES "src/*.cpp" "src/*.h")
-file(GLOB_RECURSE Repositories_SOURCES "src/Repositories/*.cpp" "src/Repositories/*.h")
-file(GLOB_RECURSE Database_SOURCES "src/Database/*.cpp" "src/Database/*.h")
-file(GLOB_RECURSE Errors_SOURCES "src/Errors/*.cpp" "src/Errors/*.h")
-file(GLOB_RECURSE Servers_SOURCES "src/Servers/*.cpp" "src/Servers/*.h")
-file(GLOB_RECURSE Services_SOURCES "src/Services/*.cpp" "src/Services/*.h")
-file(GLOB_RECURSE Sessions_SOURCES "src/Sessions/*.cpp" "src/Sessions/*.h")
-file(GLOB_RECURSE Structs_SOURCES "src/Structs/*.cpp" "src/Structs/*.h")
+file(GLOB_RECURSE Common_SOURCES "src/Common/*.cpp" "src/Common/*.h")
+file(GLOB_RECURSE Core_SOURCES "src/Core/*.cpp" "src/Core/*.h")
+file(GLOB_RECURSE Infrastructure_SOURCES "src/Infrastructure/*.cpp" "src/Infrastructure/*.h")
+file(GLOB_RECURSE Network_SOURCES "src/Network/*.cpp" "src/Network/*.h")
+file(GLOB_RECURSE Handlers_SOURCES "src/Handlers/*.cpp" "src/Handlers/*.h")
+file(GLOB_RECURSE Utils_SOURCES "src/Utils/*.cpp" "src/Utils/*.h")
 
-set(SOURCES
-    ${Main_SOURCES}
-    ${Repositories_SOURCES}
-    ${Database_SOURCES}
-    ${Errors_SOURCES}
-    ${Servers_SOURCES}
-    ${Services_SOURCES}
-    ${Sessions_SOURCES}
-    ${Structs_SOURCES}
+set(LIB_SOURCES
+    ${Common_SOURCES}
+    ${Core_SOURCES}
+    ${Infrastructure_SOURCES}
+    ${Network_SOURCES}
+    ${Handlers_SOURCES}
+    ${Utils_SOURCES}
 )
 
 # ------------------------------
-# Executable
+# Library (réutilisable pour tests)
 # ------------------------------
-add_executable(server ${SOURCES})
+add_library(server_lib STATIC ${LIB_SOURCES})
 
-# ------------------------------
-# Includes par target (propre)
-# ------------------------------
-target_include_directories(server PRIVATE
+target_include_directories(server_lib PUBLIC
+    ${CMAKE_SOURCE_DIR}/src
     ${Boost_INCLUDE_DIRS}
     ${ARGON2_INCLUDE_DIRS}
     ${OPENSSL_INCLUDE_DIR}
     ${NATS_INCLUDE_DIR}
 )
 
-# ------------------------------
-# Link libraries
-# ------------------------------
-target_link_libraries(server PRIVATE
+target_link_libraries(server_lib PUBLIC
     pqxx
     pq
     Boost::filesystem
@@ -100,6 +90,13 @@ target_link_libraries(server PRIVATE
 )
 
 # ------------------------------
+# Executable (main + lib)
+# ------------------------------
+add_executable(server src/main.cpp)
+
+target_link_libraries(server PRIVATE server_lib)
+
+# ------------------------------
 # RPATH Boost (Linux / macOS)
 # ------------------------------
 if(APPLE)
@@ -109,3 +106,30 @@ elseif(UNIX)
 endif()
 
 target_link_options(server PRIVATE -Wl,-rpath,${BOOST_LIB_PATH})
+
+# ------------------------------
+# Tests
+# ------------------------------
+
+include(FetchContent)
+
+FetchContent_Declare(
+  googletest
+  URL https://github.com/google/googletest/archive/refs/tags/v1.14.0.zip
+)
+FetchContent_MakeAvailable(googletest)
+
+enable_testing()
+
+file(GLOB_RECURSE TEST_SOURCES "Tests/*.cpp")
+add_executable(server_tests ${TEST_SOURCES})
+
+target_link_libraries(server_tests PRIVATE
+    server_lib
+    gtest
+    gtest_main
+    gmock
+)
+
+include(GoogleTest)
+gtest_discover_tests(server_tests)
